--- a/chat_Application/src/App.css
+++ b/chat_Application/src/App.css
@@ -6,12 +6,11 @@ body {
 
 .sidebar{
   background: url('https://images.pexels.com/photos/7130488/pexels-photo-7130488.jpeg?auto=compress&cs=tinysrgb&w=600');
-  /* background-size: contain; */
-  background-repeat: no-repeat;
+  background-size: 100% 100%;
   height: 100vh;
   padding-top: 10px;
   flex-shrink: 0;
-  margin-top: 55px;
+  margin-top: 32px;
 }
 .rows{
   width: 100vw;
@@ -29,10 +28,8 @@ li{
   list-style: none;
 }
 .chatPage {
-  /* linear-gradient(to bottom left, #C0C0C0, #252b30) */
   background: url('https://img.freepik.com/free-vector/blue-social-media-background_1017-7008.jpg');
-  background-size: contain;
-  background-repeat: repeat;
+  background-size: 100% 100%;
   margin:0;
   padding: 10px;
   display: flex;
@@ -64,17 +61,21 @@ li{
 }
 .main-content{
   position: fixed;
-  bottom: 20px;
+  bottom: 3px;
   margin-right: 20px;
   width:65%;
-  margin-bottom: 10px;
+  margin-bottom: 3px;
 }
 .me-auto{
   align-items: center;
   display: flex;
   justify-content: flex-end !important;
   align-items: flex-end !important;
-  justify-content: flex-end !important;
   text-align: left;  
 }
 
+.logo{
+  font-family: 'Caveat', cursive;
+  align-items: center;
+  display: flex;
+}
