--- a/chat_Application/src/Components/myStyles.css
+++ b/chat_Application/src/Components/myStyles.css
@@ -136,7 +136,6 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
 .message-container{
-    /* background-color: aqua; */
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -175,8 +174,6 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 .message-self{
     display: flex;
     justify-content: flex-end;
-    align-items: right;
-
     padding: 1rem;
    
    span{
@@ -189,8 +186,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 .message-other{
     display: flex;
-
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 1rem;
 
     span{
@@ -201,7 +197,6 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
        }
 
 }
-
 
 .welcome-container{
     flex: 0.7;
@@ -330,4 +325,15 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   .unique-textfield .css-1x51dt5-MuiInputBase-input-MuiInput-input {
     width: auto !important; /* Override width */
+}
+.date-header{
+    text-align: center;
+}
+.conversation-container{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s; 
+}
+      
+.conversation-container:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
