--- a/chat_Application/src/Components/myStyles.css
+++ b/chat_Application/src/Components/myStyles.css
@@ -10,39 +10,33 @@
     flex: 0.3;
     display: flex;
     flex-direction: column;
-    /* background-color: black; */
 }
 
 .chatarea-container{
     flex: 0.7;
-    /* background-color: grey; */
     display: flex;
     max-height: 100%;   
     flex-direction: column;
     padding: 10px;
-
 }
-
 
 .time{
     display: inline-flex;
     font-size: 14px !important;
     color: red;
-    align-items: end;
-    
+    align-items: end;    
 }
 
 @media only screen 
 and (min-device-width: 320px) 
 and (max-device-width: 768px) {
     
-    .chatarea-container{
+.chatarea-container{
     flex:1;
     display: flex;
-max-height: 100%;   
-flex-direction: column;
-padding: 10px;}
-
+    max-height: 100%;   
+    flex-direction: column;
+    padding: 10px;}
 }
 
 .sb-header{
@@ -51,8 +45,7 @@ padding: 10px;}
     padding: 10px 5px;
     margin: 10px;
     display: flex;
-    justify-content: space-between;
-    
+    justify-content: space-between;    
 }
 
 .sb-searchBar{
@@ -79,7 +72,6 @@ padding: 10px;}
     margin: 10px;
     flex: 1;
     overflow-y: auto;
-
 }
 
 .conversation-container{
@@ -91,6 +83,7 @@ padding: 10px;}
    margin: 5px;
    border-radius: 20px;
 }
+
 .con-icon{
     grid-area: 1/1/3/2;
    text-transform: uppercase;
@@ -104,7 +97,6 @@ padding: 10px;}
     width: 32px;
     padding: 2px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
     border-radius: 50%;
     justify-self: center;
     align-self: center;
@@ -113,7 +105,6 @@ padding: 10px;}
         height: 100%;
         border-radius: 50%;
     }
-
 }
 
 .con-title{
@@ -128,13 +119,12 @@ padding: 10px;}
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 0.75rem;
     color: black;
-
 }
 
 .con-latestMessage{
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .message-container{
     display: flex;
     flex-direction: column;
@@ -150,7 +140,6 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color:  rgba(69, 188, 218, 0.589);
     border-radius: 20px;
     padding: 10px;
-
 }
 
 .input-container{
@@ -173,7 +162,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 .message-self{
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-end !important;
     padding: 1rem;
    
    span{
@@ -219,7 +208,6 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         width: 100vw;
         height: 100vh;
         display: flex;
-        /* flex-direction: column; */
     }
     .sb-searchBar{
         input{
@@ -230,13 +218,9 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     flex: 1;
     display: flex;
     flex-direction: column;
-    /* min-height: 100vh; */
     overflow-y: auto;
     scrollbar-width: none;
     }
-
-    
-  /* Styles */
 }
 
   .create-group-container{
@@ -251,14 +235,10 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         border:none;
         outline: none;
         font-size: 1.25rem;
-      
     }
   }
 
-
 .create-group{
-   
-   
     padding: 10px 10px ;
     border-radius: 20px;
     margin: 10px;
@@ -279,17 +259,12 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: greenyellow;    
 }
 
-
 .suggestion-list{
-
-   
-    
     max-height: 400px;
     overflow-y: scroll;
     list-style: none;
     position: absolute;
     background-color: aliceblue;
-    
     
       li{
         display: flex;
@@ -297,30 +272,28 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         align-items: center;
         padding:10px;
         border-bottom: 1px solid black;
-        
-        
       }
       li:hover{
         background-color: gold;
       }
+}
   
-  }
-  
-  .suggestion-list::-webkit-scrollbar{
+.suggestion-list::-webkit-scrollbar{
     display: none;
-  }
-  .start-adornment{
+}
+.start-adornment{
     display: flex;
-    flex-wrap: wrap;
-   
-  }
+    flex-wrap: wrap;   
+}
 
   .unique-textfield .css-1x51dt5-MuiInputBase-input-MuiInput-input {
-    width: auto !important; /* Override width */
+    width: auto !important;
 }
+
 .date-header{
     text-align: center;
 }
+
 .conversation-container{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s; 
@@ -339,6 +312,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     justify-content: space-between;
     margin-top: 2%;
 }
+
 .imgLogin{
     flex: 1 1 60%;
     height: 50%;
@@ -356,4 +330,4 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     flex: 1 1 60%;
     height: 40%;
     max-width: 40%;
-  }
+}
